# llmfit

./: .gitignore  AGENTS.md  API.md  Cargo.toml  Dockerfile  LMSTUDIO_SOURCE.md  Makefile  README.md  README.zh.md  release-please-config.json
.githooks/: pre-push
.github/workflows/: ci.yml  release-desktop.yml  release.yml
.sisyphus/plans/: lm-studio-download-tests.md  lmstudio-404-hardening.md  lmstudio-catalog-import.md  runtime-artifact-scrape-support.md
.todos/: agent_errors.jsonl  command_usage.jsonl  config.json  issues.db
data/: hf_models.json
llmfit-core/: AGENTS.md
llmfit-core/data/: hf_models.json
llmfit-core/src/: fit.rs  hardware.rs  lib.rs  models.rs  plan.rs  providers.rs  update.rs
llmfit-desktop/: AGENTS.md
llmfit-desktop/src/: main.rs
llmfit-desktop/ui/: app.js
llmfit-tui/: AGENTS.md  Cargo.toml
llmfit-tui/src/: display.rs  main.rs  serve_api.rs  tui_app.rs  tui_events.rs  tui_ui.rs
llmfit-web/: AGENTS.md
llmfit-web/src/: App.jsx  App.test.jsx  api.js  api.test.js  main.jsx  styles.css  test-setup.js  themes.css  utils.js
llmfit-web/src/components/: ComparePanel.jsx  DetailPanel.jsx  FilterBar.jsx  Header.jsx  ModelTable.jsx  SystemPanel.jsx
llmfit-web/src/contexts/: FilterContext.jsx  ModelContext.jsx
llmfit-web/src/hooks/: useModels.js  useSystem.js
scripts/: AGENTS.md  scrape_hf_models.py  verify_models.py
src/: fit.rs  providers.rs  tui_ui.rs
