[package]
name = "llmfit"
version = "0.3.1"
edition = "2024"
authors = ["axjns"]
description = "Right-size LLM models to your system hardware. Interactive TUI and CLI to match models against available RAM, CPU, and GPU."
license = "MIT"
repository = "https://github.com/axjns/llmfit"
homepage = "https://github.com/axjns/llmfit"
readme = "README.md"
keywords = ["llm", "tui", "hardware", "inference", "models"]
categories = ["command-line-utilities"]
exclude = ["target/", "scripts/", "demo.gif"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tabled = "0.15"
colored = "2.1"
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2.9", features = ["json"] }
